# tabula

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  geometry.rs  main.rs  renderer.rs  window.rs
src/wayland/: mod.rs
