[package]
name = "tabula"
version = "1.0.0"
description = "Wayland Wallpaper Tool"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/tabula"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[features]
default = ["png", "jpeg"]
jpeg = ["image/jpeg"]
png = ["image/png"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
glutin = { version = "0.32.1", default-features = false, features = ["egl", "wayland"] }
image = { version = "0.25.6", default-features = false }
raw-window-handle = "0.6.2"
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = ["xkbcommon"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-backend = { version = "0.3.10", features = ["client_system"] }

[build-dependencies]
gl_generator = "0.14.0"
